Fixed vc-dialog height bug on IE

--- a/src/main/less/vcomet/ui/vc-dialog/vc-dialog.less
+++ b/src/main/less/vcomet/ui/vc-dialog/vc-dialog.less
@@ -21,6 +21,7 @@
     display: flex;
     padding: 5px 5px 5px 10px;
     height: 40px;
+    flex-grow: 0;
 
     align-items: center;
     flex: none;
@@ -53,6 +54,7 @@
     padding: 5px 10px;
     flex-direction: row;
     align-items: center;
+    flex-grow: 0;
   }
 
   .@{element}-dialog .@{element}-footer[location="right"] {
